# py-due

./: CHANGELOG.md  README.md  _CHECKLIST.md  _COMMANDS.md  _TEMPLATE_GUIDE.md  pyproject.toml
due/: __init__.py  __main__.py  main.py
due/cli/: output.py
due/cli/commands/: list_.py
due/domain/: errors.py  models.py
due/services/: task_service.py
due/storage/config/: base.py  yaml.py
due/storage/markdown/: base.py  filesystem.py
due/tests/domain/: test_models.py
due/tests/services/: conftest.py  test_task_service.py
due/tests/storage/config/: test_yaml_config_storage.py
due/tests/storage/markdown/: test_filesystem_markdown_storage.py
sample_data/archive/: done.md  old_tasks.md
sample_data/personal/: health.md  home.md
sample_data/planning/: meetings.md  milestones.md
sample_data/projects/: backend.md  frontend.md
sample_data/work/: meetings.md  projects.md
termplate/: __init__.py  __main__.py  main.py
termplate/cli/commands/: add.py  done.py  list_.py  output_test.py
termplate/domain/: errors.py  models.py
termplate/services/: output_test.py  task.py
termplate/storage/config/: base.py  yaml.py
termplate/storage/task/: base.py  json.py
termplate/tests/: conftest.py
termplate/tests/cli/: test_add_command.py  test_done_command.py  test_list_command.py  test_output_test_command.py
termplate/tests/domain/: test_errors.py
termplate/tests/services/: test_output_test_service.py  test_task_service.py
termplate/tests/storage/config/: test_yaml_config_storage.py
termplate/tests/storage/task/: test_json_task_repository.py
termplate/tui/: app.py  bindings.py  bindings.yaml
termplate/tui/screens/: add.tcss  add_screen.py  main_screen.py
termplate/tui/screens/tabs/: __init__.py  done_tab.py  tasks_tab.py
termplate/tui/themes/custom-classic-black/: theme.py
